# ArchAlive

./: .gitignore  .vercelignore  LICENSE  README.md  package-lock.json  package.json  vercel-build.sh  vercel.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/public/: robots.txt  sitemap.xml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ContextMenu.tsx  Dashboard.tsx  Editor.tsx  MobileNodeSelector.tsx  NodeInspector.tsx  PacketLayerPixi.tsx  SaveManager.tsx  ServerLogicEditor.tsx  Sidebar.tsx  node-types.ts
client/src/components/edges/: LatencyEdge.tsx
client/src/components/modals/: AboutPopover.tsx  InternalNodes.tsx  WelcomeModal.tsx
client/src/components/nodes/: ApiGatewayNode.tsx  CacheNode.tsx  ClientNode.tsx  DatabaseNode.tsx  LoadBalancerNode.tsx  MessageQueueNode.tsx  ServerNode.tsx  TopicNode.tsx
client/src/components/puzzles/: PuzzleHUD.tsx
client/src/components/tutorial/: TutorialOverlay.tsx
client/src/hooks/: usePuzzle.ts  useSimulationWorker.ts
client/src/puzzles/: scenarios.ts  types.ts
client/src/stores/: metricsStore.ts  simDataStore.ts
client/src/utils/: benchmark.ts  colors.ts
client/src/workers/: simulation.worker.ts
simulation/: Cargo.toml
simulation/src/: engine.rs  lib.rs  node.rs  ops.rs  tests.rs  types.rs  wasm_api.rs
