[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.83", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3"
